<resources>
    <string name="api_key">5f95c371b01c488dbf7cc07c8b58976d</string>
    <string name="api_matches_link">https://api.football-data.org/v2/matches</string>
    <string name="login_preference">com.example.livescoreproject_login_preference</string>
    <string name="login_userid_preference">com.example.livescoreproject_login_userid_preference</string>
    <string name="app_name">Livescore</string>
    <string name="livescore">Livescore</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="welcome_reg_text">New to livescore?</string>
    <string name="register">Register</string>
    <string name="matches">Matches</string>
    <string name="nav_drawer_open">open nav drawer</string>
    <string name="nav_drawer_close">close nav drawer</string>
    <string name="minzat_marian_robert">Minzat Marian Robert</string>
    <string name="grupa_1080_seria_d">Grupa 1080, Seria D</string>
    <string name="application_logo">application logo</string>
    <string name="version_1_0">version 1.0</string>
    <string name="year_2019">© 2019</string>
    <string name="dam">DAM</string>
    <string name="temp_username">user</string>
    <string name="temp_password">pass</string>
    <string name="temp_email">test@test.com</string>
    <string name="temp_userId">1</string>
    <string name="current_date">Current date</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sex">Sex</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="matchtime">matchTime</string>
    <string name="hometeam">homeTeam</string>
    <string name="awayteam">awayTeam</string>
    <string name="matchscore">mS</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="no_intenet_connection">No intenet connection</string>
    <string name="network_unavailable">Network unavailable. Try again in 1 minute.</string>
    <string name="wins">Wins</string>
    <string name="number_of_matches">Number of matches:</string>
    <string name="nom">nom</string>
    <string name="total_goals">Total goals:</string>
    <string name="tg">tg</string>
    <string name="htl">htl</string>
    <string name="history">History</string>
    <string name="matchstatus">matchStatus</string>
    <string name="losses">Losses</string>
    <string name="htw">htw</string>
    <string name="atw">atw</string>
    <string name="draws">Draws</string>
    <string name="atl">atl</string>
    <string name="htd">htd</string>
    <string name="atd">atd</string>
    <string name="competitionname">competitionName</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_firebase">Add to firebase</string>
    <string name="match_added_to_favs">Match added to favorites!</string>
    <string name="remove">Remove</string>
    <string name="long_press_to_delete">Long press to delete</string>
    <string name="number_of_favorite_matches_from_2018">Number of favorite matches from 2018:</string>
    <string name="number_of_favorite_matches_from_2019">Number of favorite matches from 2019:</string>
    <string name="number_of_favorite_matches_from_2020">Number of favorite matches from 2020:</string>
    <string name="users_under_18">Users under 18:</string>
    <string name="users_over_18">Users over 18:</string>
    <string name="reports_amp_graphs"><![CDATA[Reports & graphs]]></string>
    <string name="save_to_txt_file">Save to txt file</string>
    <string name="logo_ase">https://upload.wikimedia.org/wikipedia/ro/a/a3/Logo_ASE.png</string>
    <string name="no_data_for_piechart">No data for piechart</string>
    <string name="logo_ase_text">Logo ASE</string>
</resources>
