<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivAboutLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="42dp"
        android:contentDescription="@string/application_logo"
        app:layout_constraintBottom_toBottomOf="@+id/tvAboutLivescore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvAboutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minzat_marian_robert"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tvAboutGroupSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupa_1080_seria_d"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutName" />

    <TextView
        android:id="@+id/tvAboutSeminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dam"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutLivescore" />

    <TextView
        android:id="@+id/tvAboutLivescore"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:includeFontPadding="false"
        android:paddingTop="0dp"
        android:text="@string/livescore"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tvAboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_1_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/tvAboutYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_2019"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutVersion" />
</androidx.constraintlayout.widget.ConstraintLayout>